// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GuidanceLinksTest linkComponentType is defined as ExternalLink 1`] = `
<DocumentFragment>
  <span
    class="guidance-links"
  >
    <mock-externallink
      href="https://url1"
    >
      TEXT1
    </mock-externallink>
  </span>
</DocumentFragment>
`;

exports[`GuidanceLinksTest links is empty 1`] = `<DocumentFragment />`;

exports[`GuidanceLinksTest links is not null and correct with best practice and regular links (excludes BEST PRACTICE) 1`] = `
<DocumentFragment>
  <span
    class="className"
  >
    <mock-externallink
      href="https://url1"
    >
      TEXT1
    </mock-externallink>
    <span>
      , 
    </span>
    <mock-externallink
      href="https://url2"
    >
      TEXT2
    </mock-externallink>
  </span>
</DocumentFragment>
`;

exports[`GuidanceLinksTest links is not null and correct with one best practice link 1`] = `
<DocumentFragment>
  <span
    class="className"
  />
</DocumentFragment>
`;

exports[`GuidanceLinksTest links is not null and correct with one regular link 1`] = `
<DocumentFragment>
  <span
    class="className"
  >
    <mock-externallink
      href="https://url1"
    >
      TEXT1
    </mock-externallink>
  </span>
</DocumentFragment>
`;

exports[`GuidanceLinksTest links is not null and correct with two regular links 1`] = `
<DocumentFragment>
  <span
    class="className"
  >
    <mock-externallink
      href="https://url1"
    >
      TEXT1
    </mock-externallink>
    <span>
      , 
    </span>
    <mock-externallink
      href="https://url2"
    >
      TEXT2
    </mock-externallink>
  </span>
</DocumentFragment>
`;

exports[`GuidanceLinksTest links is null 1`] = `<DocumentFragment />`;
